fixed image sizing on mobile screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,7 +67,6 @@ body {
 
 img, video {
   border-radius: 15px;
-  // margin-top: 20px;
 }
 
 p, li {
@@ -462,7 +461,7 @@ a {
     @include phone-size() {
       width: 100%;
       height: auto;
-      
+
       margin: 0;
       padding: 0;
       // width: auto;
@@ -472,6 +471,29 @@ a {
     // height: 300px;
   }
   &-profile-picture-container {
+  }
+  &-project-card-content {
+    margin: 20px 0;
+
+    @include phone-size() {
+      margin: 0;
+    }
+
+    img, video {
+      width: auto;
+      max-width: 400px;
+      max-height: 400px;
+
+      &::before {
+        width: auto;
+        max-width: 400px;
+        max-height: 400px;
+      }
+
+      @include phone-size() {
+        width: 100%;
+      }
+    }
   }
   &-project-section {
     display: flex;
